--- a/01-Introduction.Rmd
+++ b/01-Introduction.Rmd
@@ -247,12 +247,12 @@ The World Health Organisation has previously defined Metabolic Syndrome to be gl
 
 Obesity is defined as a \gls{bmi} of >30 kg/m2 and is a contributing risk factor for many other diseases such as type II diabetes (T2D) and cardiovascular disease [@Haslam2005]. Obesity has been a key focus for research as the prevalence continues to increase and is posing a major threat to health systems in many countries [@Wang2011]. With respect to Polynesian populations obesity is a major problem with an obesity rate of 68%. New Zealand M$\bar{a}$ori have an obesity prevalence of 48% [@Health2013]. From 2012 to 2013 the prevalence of obesity increased by 6% in Pacific populations. Heritability of \gls{bmi} ranges from 45% to 84% in twin studies [@Schousboe2003].
 
-Type II diabetes is diagnosed by a fasting blood glucose of >7.0 mmol/L or 2-hr post blood glucose load of  >11.1 mmol/L [@Alberti1998]. The risk of developing T2D is strongly correlated with excess weight [@Rana2007]. The prevalence of diabetes is 13% in Polynesians and 7% in NZ M$\bar{a}$ori [@Health2013] compared to 5.5% in Europeans [@Winnard2013a]. In New Zealand, the rate of diabetes is twice that in M$\bar{a}$ori compared to non-M$\bar{a}$ori, and the rate is 3.6 fold higher in Pacific compared to non-Pacific ethnicities. 
+Type II diabetes is diagnosed by a fasting blood glucose of >7.0 mmol/L or 2-hr post blood glucose load of  >11.1 mmol/L [@Alberti1998]. The risk of developing T2D is strongly correlated with excess weight [@Rana2007]. The prevalence of diabetes is 13% in Polynesians and 7% in NZ M$\bar{a}$ori [@Health2013] compared to 5.5% in Europeans [@Winnard2013]. In New Zealand, the rate of diabetes is twice that in M$\bar{a}$ori compared to non-M$\bar{a}$ori, and the rate is 3.6 fold higher in Pacific compared to non-Pacific ethnicities. 
 
 There have been multiple loci associated with T2D [@Billings2010], however, @Chen2010 found no evidence for enrichment in selection for \gls{bmi}, but found significant enrichment for T2D. The genes associated with T2D have been found to be differentiated by population, however the individual \gls{snp}s are often not [@pickrell2009signals]. @Koh2014 identified 6 \gls{snp}s in or near 9 genes that had been reported as T2D associated and overlapped with evidence of positive selection in East Asian populations. Common variants that have been found in European populations associating with obesity don't replicate in the Samoan population [@Karns2012]. The non-replication of European variants in Polynesians and the high prevalence of obesity in Polynesians suggest there is likely to be 
 some population specific variants that are yet to be identified. Rare variants tend to be recent and therefore geographically restricted [@1KGP2012].
 
-Hyperuricaemia can be caused by diet, genetic predisposition or under-excretion of urate. The elevated uric acid levels in the blood contributes to the forming of urate crystals in the joints, triggering an inflammatory response by stimulating the synthesis and release of humoral and cellular inflammatory mediators [@Choi2005a]. There is a clear relationship between hyperuricaemia and the causal role in gout [@Snaith2004]. There is also an increased prevalence in gout in different ethnicities. New Zealand M$\bar{a}$ori and Pacific ethnicities have a prevalence of 12% and 14% respectively in males, compared to 4% in both European and Asian males [@Winnard2012; @Winnard2013a]. While New Zealand M$\bar{a}$ori and Polynesians have an increased prevalence of hyperuricaemia, they also have a genetic predisposition to elevated urate and risk of gout  [@Hollis-Moffatt2009; @Hollis-Moffatt2011; @Phipps-Green2010]. The prevalence of metabolic syndrome in US gout patients is ~60%, or nearly 3 fold higher than US adults without gout [@Choi2007b].
+Hyperuricaemia can be caused by diet, genetic predisposition or under-excretion of urate. The elevated uric acid levels in the blood contributes to the forming of urate crystals in the joints, triggering an inflammatory response by stimulating the synthesis and release of humoral and cellular inflammatory mediators [@Choi2005a]. There is a clear relationship between hyperuricaemia and the causal role in gout [@Snaith2004]. There is also an increased prevalence in gout in different ethnicities. New Zealand M$\bar{a}$ori and Pacific ethnicities have a prevalence of 12% and 14% respectively in males, compared to 4% in both European and Asian males [@Winnard2012; @Winnard2013]. While New Zealand M$\bar{a}$ori and Polynesians have an increased prevalence of hyperuricaemia, they also have a genetic predisposition to elevated urate and risk of gout  [@Hollis-Moffatt2009; @Hollis-Moffatt2011; @Phipps-Green2010]. The prevalence of metabolic syndrome in US gout patients is ~60%, or nearly 3 fold higher than US adults without gout [@Choi2007b].
 
 Variability in serum urate explained by the main urate loci _SLC2A9_ and _ABCG2_, expressed in the kidney, is 3.4%. Twenty six other loci associated with serum urate explain a further 3.6% of the variance [@Kottgen2013]. The heritability of serum uric acid ranging from 40 - 70% [@Nath2007; @Yang2005]. This difference in explained variability and total heritability leaves a large component yet to be explained. This missing heritability could be reduced through identifying additional variance attributed to non-additive effects.
 
