--- a/references.bib
+++ b/references.bib
@@ -1820,9 +1820,10 @@ url = {http://www.ncbi.nlm.nih.gov/pubmed/17391148},
 volume = {9},
 year = {2007}
 }
-@article{Winnard2013a,
+@article{Winnard2013,
 abstract = {AIMS: To determine the co-prevalence of gout, diabetes and cardiovascular disease (CVD) in the entire Aotearoa New Zealand adult population to inform clinical practice. METHODS: Algorithms based on hospital admissions, outpatient visits, drug dispensing, laboratory test data and mortality for the Aotearoa New Zealand Health Tracker (ANZHT) population aged {\textgreater}20 years (n = 3,036,093) were used to estimate the prevalence of those identified with gout, diabetes and CVD in 2009. RESULTS: The crude prevalence in the adult ANZHT population of gout was 3.9{\%}, of diabetes was 6.6{\%}, and of CVD was 5.4{\%}. For those identified with gout, 25.6{\%} had diabetes and 22.7{\%} had CVD. Both diabetes and CVD were more prevalent in those identified with gout, compared with those without gout (age-standardised rate (ASR) ratio 3.5 for diabetes and 2.7 for CVD, p for both {\textless}0.001). CONCLUSION: By applying algorithms based on hospital coding, community drug dispensing and laboratory test data sets, we have demonstrated a high co-prevalence of gout, diabetes and CVD in the adult population of Aotearoa New Zealand. Health service presentation with gout can be an important opportunity to assess risk and manage co-morbid disease. Prevention and management strategies are reinforcing for these metabolic conditions.},
 author = {Winnard, Doone and Wright, Craig and Jackson, Gary and Gow, Peter and Kerr, Andrew and McLachlan, Andrew and Orr-Walker, Brandon and Dalbeth, Nicola},
+file = {:home/murraycadzow/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Winnard et al. - 2013 - Gout, diabetes and cardiovascular disease in the Aotearoa New Zealand adult population co-prevalence and implica.pdf:pdf},
 issn = {1175-8716},
 journal = {New Zealand Medical Journal},
 keywords = {Adult,Aged,Algorithms,Cardiovascular Diseases,Cardiovascular Diseases: epidemiology,Comorbidity,Cross-Sectional Studies,Diabetes Mellitus,Diabetes Mellitus: epidemiology,Diabetes Mellitus: ethnology,Female,Gout,Gout: epidemiology,Humans,Male,Middle Aged,Population Groups,Population Groups: statistics {\&} numerical data,Population Surveillance,Young Adult},
@@ -1837,6 +1838,7 @@ url = {http://europepmc.org/abstract/MED/23385835},
 volume = {126},
 year = {2013}
 }
+
 @article{Billings2010,
 abstract = {Type 2 diabetes mellitus has been at the forefront of human diseases and phenotypes studied by new genetic analyses. Thanks to genome-wide association studies, we have made substantial progress in elucidating the genetic basis of type 2 diabetes. This review summarizes the concept, history, and recent discoveries produced by genome-wide association studies for type 2 diabetes and glycemic traits, with a focus on the key notions we have gleaned from these efforts. Genome-wide association findings have illustrated novel pathways, pointed toward fundamental biology, confirmed prior epidemiological observations, drawn attention to the role of $\beta$-cell dysfunction in type 2 diabetes, explained {\~{}}10{\%} of disease heritability, tempered our expectations with regard to their use in clinical prediction, and provided possible targets for pharmacotherapy and pharmacogenetic clinical trials. We can apply these lessons to future investigation so as to improve our understanding of the genetic basis of type 2 diabetes.},
 author = {Billings, Liana K and Florez, Jose C},
@@ -2631,4 +2633,22 @@ title = {{A thrifty variant in CREBRF strongly influences body mass index in Sam
 url = {http://dx.doi.org/10.1038/ng.3620},
 volume = {48},
 year = {2016}
+}
+
+@article{Cadzow2017,
+abstract = {Background/Purpose : Accurate case-definition is important for epidemiological studies of gout. However, in multipurpose cohort studies frequently used for genome wide association studies, limited information is usually available for gout case-definition. Many different combinations of available data have been used to identify gout cases in large genetic epidemiological studies. The aim of this study was to determine the most precise casedefinition of gout from the limited items available in multipurpose cohorts for use in for population-based genetic studies. Methods: Data from the UK Biobank were analysed. Data (including genome-wide genotypes) were available for 105,421 European participants aged 40 to 69 years without kidney disease. Gout definitions and combinations of these definitions were identified from previous epidemiological studies. Self-report of gout was defined by reporting of gout diagnosis by the participant at the time of study interview. Hospital diagnosis of gout was defined by either primary or secondary hospital discharge coding for gout (ICD10 M10 including subcodes). Urate lowering therapy (ULT) use was defined by self-report of allopurinol, febuxostat, or sulphinpyrazone use, without leukemia or lymphoma (ICD10 C81-C96). Winnard-defined gout was defined by hospital diagnosis or gout specific medication (ULT or colchicine)1. Logistic regression was performed genome-wide using plink2 adjusted for age, sex, waist circumference, and waist circumference to height ratio. Results : There were 2066 (2.0{\%}) gout cases defined by self-report of gout, 1652 (1.6{\%}) defined by ULT use, 382 (0.4{\%}) defined by hospital diagnosis, 2295 (2.2{\%}) defined by self-report of gout or ULT use, and 1861 (1.8{\%}) gout cases defined by Winnard-definition. For the originally reported 10 hyperuricaemia SNPs2, association with gout at genome-wide significance (P{\textless}5x10-8) was observed for 5 SNPs (ABCG2, SLC2A9, GCKR, SLC17A3 and SLC22A12) using the definition of self-report of gout and the definition of self-report of gout or ULT use, 4 SNPs (ABCG2, SLC2A9, GCKR, and SLC17A3) using the Winnard definition, 3 SNPs (ABCG2, SLC2A9, and GCKR) using the ULT use definition, and 2 SNPs (ABCG2 and SLC2A9) using the hospital diagnosis definition (Table). The definitions of self-report of gout or ULT use, and self-report of gout alone had greatest precision for all analyses. Conclusion: Of existing definitions that use routinely collected data, case definitions that include self-report of gout have the greatest precision for detecting genome wide significant associations in epidemiological studies of gout. (Table Presented).},
+author = {Cadzow, Murray and Merriman, Tony R and Dalbeth, Nicola},
+doi = {10.1186/s13075-017-1390-1},
+file = {:home/murraycadzow/Dropbox/Papers/s13075-017-1390-1.pdf:pdf},
+issn = {1478-6362},
+journal = {Arthritis Research {\&} Therapy},
+keywords = {European,ICD-10,adult,aged,allopurinol,biobank,breast cancer resistance protein,colchicine,controlled study,diagnosis,endogenous compound,febuxostat,genetic susceptibility,genome,genotype,gout,height,hospital discharge,human,hyperuricemia,interview,kidney disease,leukemia,logistic regression analysis,lymphoma,major clinical study,population model,secondary care center,self report,sulfinpyrazone,urate,urate transporter,waist circumference},
+month = {dec},
+number = {1},
+pages = {181},
+publisher = {Arthritis Research {\&} Therapy},
+title = {{Performance of gout definitions for genetic epidemiological studies: analysis of UK Biobank}},
+url = {http://www.embase.com/search/results?subaction=viewrecord{\&}from=export{\&}id=L613886443{\%}5Cnhttp://dx.doi.org/10.1002/art.39977 http://arthritis-research.biomedcentral.com/articles/10.1186/s13075-017-1390-1},
+volume = {19},
+year = {2017}
 }
